--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,8 @@
     position: relative;
     padding-left: 15%;
     padding-right: 15%;
+    padding-top: 7.5rem;
+    padding-bottom: 7.5rem;
 
     @media(max-width: 1300px) {
         padding-left: 10%;
