Adjusted header top margin

--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -1,4 +1,4 @@
-  <div class="flex flex-column gap-4 sm:gap-7 align-items-center sm:mt-5 sm:pt-6">
+  <div class="flex flex-column gap-4 sm:gap-7 align-items-center sm:mt-6">
     <div class="flex gap-2 sm:gap-4 fadein animation-duration-1000 main-wrapper">
       <img src="assets/DLopez-cv-picture-transparent.png" alt="Daniel Lopez picture" class="w-7rem sm:w-11rem">
       <div class="flex flex-column justify-content-between text-4xl sm:text-6xl text-800 font-light">
