Contact buttons margin top , smaller aboutme text

--- a/src/app/components/aboutme-section/aboutme-section.component.html
+++ b/src/app/components/aboutme-section/aboutme-section.component.html
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div #textMobile class="text-600 text-2xl opacity-0 animation-duration-1000 block sm:hidden text-justify" style="margin-top: 22rem;">
+    <div #textMobile class="text-600 text-xl sm:text-2xl opacity-0 animation-duration-1000 block sm:hidden text-justify" style="margin-top: 22rem;">
       <p>“It’s been amazing working with him! I whish I could just replace all my coworkers with copies of him”, “Great Software Engineer, better person.”, “He solves every problem so quickly! I could watch him solve problems all day”… no one ever said these, but this is what my past coworkers probably thought of me had you asked them.</p>
       <p>I consider myself a <span class="text-pink-600">Software Engineer</span>. Not a frontend<span class="xl:hidden">{{' '}}</span>/<span class="xl:hidden">{{' '}}</span>backend<span class="xl:hidden">{{' '}}</span>/<span class="xl:hidden">{{' '}}</span>fullstack<span class="xl:hidden">{{' '}}</span>/<span class="xl:hidden">{{' '}}</span>whatever developer, but an Engineer. With time I’ve come to realize that what makes a good engineer is not how many tools or languages he/she masters, but his/her ability to solve problems, and that’s what I do and (more importantly) enjoy most.</p>
       <p>I’m a curious and adventurous person, and so I started this career thinking of the many doors it could open and the many paths I could take, and the possibilities to always learn new stuff and travel the world.</p>
