Custom theme. Pink primary

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,10 @@
 /* PrimeNG */
 // @import "primeng/resources/primeng.min.css";
-@import "primeng/resources/themes/vela-orange/theme.css";
+// @import "primeng/resources/themes/vela-orange/theme.css";
+@import "styles/custom-theme.scss";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
-
-@import "primeng/resources/primeng.css";
 
 
 body {
