--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="relative sections-wrapper">
 
   <p-sidebar [(visible)]="sidebarVisible" styleClass="sidebar w-full sm:w-20rem">
-    <div class="flex flex-column gap-6 sm:gap-5 pl-4 pt-5 align-items-center sm:align-items-start">
+    <div class="flex flex-column gap-6 sm:gap-5 sm:pl-4 pt-5 align-items-center sm:align-items-start">
       <!-- <a href="#home" (click)="closeSidebar()" style="text-decoration: none;" class="text-700 text-2xl uppercase">Home</a> -->
       <a href="#experience" (click)="closeSidebar()" style="text-decoration: none;" class="text-700 text-5xl sm:text-4xl hover:text-pink-600 transition-duration-300">Experience</a>
       <a href="#otherprojects" (click)="closeSidebar()" style="text-decoration: none;" class="text-700 text-5xl sm:text-4xl hover:text-pink-600 transition-duration-300">Other projects</a>
@@ -19,7 +19,7 @@
   <!-- <p-button (onClick)="sidebarVisible = true" icon="pi pi-plus" styleClass="menu-button" class="menu-button" /> -->
   <button pButton (click)="sidebarVisible = true" icon="pi pi-bars" style="background-color: transparent; z-index: 1;" class="border-none text-white sm:ml-5 sm:mt-5 fixed top-0" size="large"></button>
 
-  <div id="home" class="section">
+  <div id="home" class="section sm:pt-8">
     <div class="star-layers overflow-hidden">
       <div class="star-layer" id="stars"></div>
       <div class="star-layer" id="stars2"></div>
