--- a/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
+++ b/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
@@ -32,50 +32,51 @@
     // &.p-panel-expanded {
     //   height: 25rem;
     // }
-    &:hover{
-      transition-duration: 300ms;
-      // transition-property: border;
-      border-color: var(--pink-600);
-      box-shadow: 0px 0px 20px 7px var(--pink-600);
-      // border: 1px solid var(--primary-800);
-    //   border-image: linear-gradient(to bottom, var(--primary-600) 30%, var(--pink-900) 120%) 1;
-
-      .pi-plus{
-        color: var(--pink-600) !important;
-        transition-duration: 600ms;
-      }
-      .pi-chevron-up {
-        color: var(--surface-200);
+    @media (min-width: 768px) {
+      &:hover{
         transition-duration: 300ms;
-      }
-      // .expand-icon {
-      //   transition-duration: 200ms;
-      //   padding-bottom: 0.15rem !important;
-      // }
-      // &:not(.p-panel-expanded) {
-        .title *{
-            transition-duration: 300ms;
-            color: var(--pink-600) !important;
-            border-bottom-color: var(--pink-600);
-            a:hover {
-                color: var(--pink-900) !important;
-                border-bottom: 0.5px solid var(--pink-600);
+        // transition-property: border;
+        border-color: var(--pink-600);
+        box-shadow: 0px 0px 20px 7px var(--pink-600);
+        // border: 1px solid var(--primary-800);
+      //   border-image: linear-gradient(to bottom, var(--primary-600) 30%, var(--pink-900) 120%) 1;
+
+        .pi-plus{
+          color: var(--pink-600) !important;
+          transition-duration: 600ms;
+        }
+        .pi-chevron-up {
+          color: var(--surface-200);
+          transition-duration: 300ms;
+        }
+        // .expand-icon {
+        //   transition-duration: 200ms;
+        //   padding-bottom: 0.15rem !important;
+        // }
+        // &:not(.p-panel-expanded) {
+          .title *{
+              transition-duration: 300ms;
+              color: var(--pink-600) !important;
+              border-bottom-color: var(--pink-600);
+              a:hover {
+                  color: var(--pink-900) !important;
+                  border-bottom: 0.5px solid var(--pink-600);
+              }
             }
+        // }
+        &.p-panel-expanded {
+          a:hover {
+              transition-duration: 300ms;
+              color: var(--pink-800) !important;
+              border-bottom: 0.5px solid var(--pink-800);
           }
-      // }
-      &.p-panel-expanded {
-        a:hover {
-            transition-duration: 300ms;
-            color: var(--pink-800) !important;
-            border-bottom: 0.5px solid var(--pink-800);
         }
       }
-
     }
     .pi-chevron-up {
       color: transparent;
-      @media (max-width: 576px) {
-        color: var(--surface-200);
+      @media (max-width: 768px) {
+        color: var(--surface-50);
       }
     }
     .expand-icon {
