--- a/src/app/components/aboutme-section/aboutme-section.component.scss
+++ b/src/app/components/aboutme-section/aboutme-section.component.scss
@@ -31,8 +31,8 @@
   left: 50%;
   margin-left: -10.5rem;
   border-radius: 100%;
-  background-color: var(--pink-600);
-  box-shadow: 0px 0px 40px 20px var(--pink-600);
+  background-color: var(--pink-700); // For brighter neon effect, change to pink-600
+  box-shadow: 0px 0px 40px 20px var(--pink-700); //
 
   @media(max-width: 575px) {
     margin-left: -9rem;
