--- a/src/app/components/education-section/timeline/timeline.component.scss
+++ b/src/app/components/education-section/timeline/timeline.component.scss
@@ -12,13 +12,19 @@
 }
 
 .bg-gradient {
-    background: radial-gradient(var(--pink-800) 0%, var(--pink-500) 150%) ;
-    box-shadow: 0px 0px 20px 5px var(--pink-600);
+    // Brighter neon effect
+    // background: radial-gradient(var(--pink-800) 0%, var(--pink-500) 150%) ;
+    // box-shadow: 0px 0px 20px 5px var(--pink-600);
+    background: radial-gradient(var(--pink-900) 0%, var(--pink-600) 150%) ;
+    box-shadow: 0px 0px 20px 5px var(--pink-700);
 }
 
 .bg-gradient-2 {
-    background: radial-gradient(var(--pink-800) 0%, var(--pink-400) 100%) ;
-    box-shadow: 15px 0px 20px 3px var(--pink-600);
+    // Brighter neon effect
+    // background: radial-gradient(var(--pink-800) 0%, var(--pink-400) 100%) ;
+    // box-shadow: 15px 0px 20px 3px var(--pink-600);
+    background: radial-gradient(var(--pink-900) 0%, var(--pink-500) 100%) ;
+    box-shadow: 15px 0px 20px 3px var(--pink-700);
 }
 
 //glowing orbs
