Experience item and other projects item visual adjustments.

--- a/src/app/components/experience-section/experience-item/experience-item.component.html
+++ b/src/app/components/experience-section/experience-item/experience-item.component.html
@@ -29,7 +29,7 @@
       </div>
 
       <p class="text-300 flex flex-wrap align-items-center gap-2  h-full align-content-end">
-        <span><i class="pi pi-map-marker mr-1 sm:mr-2"></i>{{location}}</span> <span class="hidden md:flex text-200">|</span> <span>{{date}}</span>
+        <span><i class="pi pi-map-marker mr-1 sm:mr-2"></i>{{location}}</span> <span class="text-50">|</span> <span>{{date}}</span>
       </p>
     </div>
   </ng-template>
