--- a/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
+++ b/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
@@ -85,10 +85,9 @@
     .p-panel-header {
       background-color: transparent;
       border: none;
-      padding-top: 0;
-      padding-bottom: 0;
       padding-top: 1rem;
-      padding-bottom: 1rem;
+      padding-bottom: 0;
+      height: 8rem;
   
       @media (min-width: 576px) {
         padding-left: 1.5rem;
