Other pr. item content padding top on mobile.

--- a/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.html
+++ b/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.html
@@ -41,7 +41,7 @@
     </div>
   </ng-template>
   <div class="flex flex-column justify-content-between h-full">
-    <p #theDescription class="text-400 text-justify">
+    <p #theDescription class="text-400 text-justify pt-3 sm:pt-0">
       {{description}}
     </p>
     <div class="flex justify-content-center transition-duration-300'">    <!-- [class]="expandablePanel.collapsed ? 'text-100' : 'text-200' -->
