Moved images to assets/images. Removed unused images

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,7 +39,7 @@
     left: 0;
     top: 0;
     z-index: -1;
-    background-image:url("../assets/dotsbg-pink.png");
+    background-image:url("../assets/images/dotsbg.png");
     filter: blur(150px);
     -webkit-filter: blur(140px);
     // border-top: 30px solid var(--primary-600);
@@ -70,7 +70,7 @@
     left: 0;
     top: 0;
     z-index: -1;
-    background-image:url("../assets/dotsbg-fliped-pink.png");
+    background-image:url("../assets/images/dotsbg-flipped.png");
     filter: blur(150px);
     -webkit-filter: blur(150px);
     // border-top: 30px solid var(--primary-600);
