--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
     </ng-template>
   </p-sidebar>
   <!-- <p-button (onClick)="sidebarVisible = true" icon="pi pi-plus" styleClass="menu-button" class="menu-button" /> -->
-  <button pButton (click)="sidebarVisible = true" icon="pi pi-bars" style="background-color: transparent; z-index: 1;" class="border-none text-white sm:ml-5 sm:mt-5 fixed top-0" size="large"></button>
+  <button pButton (click)="sidebarVisible = true" icon="pi pi-bars" style="background-color: transparent; z-index: 1; left: 0.5rem;" class="border-none text-white sm:ml-5 sm:mt-5 fixed top-0" size="large"></button>
 
   <!-- SECTIONS -->
   <div id="home" class="section sm:pt-8">
