--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,23 @@
 .sections-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+  
+    @media(min-width: 1700px) {
+      align-items: center;
+  }
 }
 
 .section {
-    // width: 100%;
-    // max-width: 1200px;
     position: relative;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 15rem;
+    padding-right: 15rem;
     padding-top: 7.5rem;
     padding-bottom: 7.5rem;
+    max-width: 1700px;
 
     @media(max-width: 1300px) {
-        padding-left: 10%;
-        padding-right: 10%;
+        padding-left: 7rem;
+        padding-right: 7rem;
     }
     @media(max-width: 768px) {
         padding-left: 2rem;
@@ -45,7 +47,6 @@
     // border-top: 30px solid var(--primary-600);
     // border-bottom: 30px solid var(--pink-600);
     background-size: cover;
-    // border-top: 100px solid black;
 }
 
 .other-projects-bg{
@@ -76,28 +77,7 @@
     // border-top: 30px solid var(--primary-600);
     // border-bottom: 30px solid var(--pink-600);
     background-size: cover;
-    // border-top: 100px solid black;
 }
-
-// .blur-line {
-//     /* The image used */
-//     background-image:url(http://static4.wikia.nocookie.net/__cb20130612023354/harrypotter/images/d/d1/Gradient-blue-background.jpg);
-
-// /* Add the blur effect */
-// filter: blur(8px);
-// -webkit-filter: blur(8px);
-
-// /* Full height */
-// height: 100%;
-
-// /* Center and scale the image nicely */
-// background-position: center;
-// background-repeat: no-repeat;
-// background-size: cover;
-
-// border: 1px solid red;
-// }
-
 
 
 //////////////////////// STARS BG /////////////////////////
@@ -129,10 +109,6 @@
   
   // Styling for the star layers container
   .star-layers {
-    // height: 100vh;
-    // background: linear-gradient(to bottom right, rgba(10,10,10) 0%, rgba(40,40,40) 100%);
-    // overflow: hidden;
-    //  position: relative;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -141,10 +117,6 @@
     z-index: -1;
     filter: blur(2px);
     -webkit-filter: blur(2px);
-    // border-top: 1px solid black;
-    // border-bottom: 1px solid black;
-    // background-color: black;
-    // background-size: cover;
   
     // Styling for each star layer
     .star-layer {
