--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,27 +42,27 @@
   top: 0;
   z-index: -1;
   background-image:url("../assets/images/dotsbg.png");
+  background-size: cover;
   filter: blur(150px);
   -webkit-filter: blur(140px);
   // border-top: 30px solid var(--primary-600);
   // border-bottom: 30px solid var(--pink-600);
-  background-size: cover;
 }
 
-.other-projects-bg{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  filter: blur(5px);
-  -webkit-filter: blur(5px);
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  background-color: black;
-  background-size: cover;
-}
+// .other-projects-bg{
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+//   z-index: -1;
+//   filter: blur(5px);
+//   -webkit-filter: blur(5px);
+//   border-top: 10px solid black;
+//   border-bottom: 10px solid black;
+//   background-color: black;
+//   background-size: cover;
+// }
 
 .education-bg{
   width: 100%;
@@ -72,11 +72,11 @@
   top: 0;
   z-index: -1;
   background-image:url("../assets/images/dotsbg-flipped.png");
+  background-size: cover;
   filter: blur(150px);
   -webkit-filter: blur(150px);
   // border-top: 30px solid var(--primary-600);
   // border-bottom: 30px solid var(--pink-600);
-  background-size: cover;
 }
 
 
@@ -105,7 +105,7 @@
 // Generate different sets of box-shadow values for stars of varying sizes
 $shadows-small: multiple-box-shadow(60); // Small stars 700
 $shadows-medium: multiple-box-shadow(30); // Medium stars 200
-//   $shadows-big: multiple-box-shadow(15); // Big stars 100
+// $shadows-big: multiple-box-shadow(15); // Big stars 100
   
 // Styling for the star layers container
 .star-layers {
