Stars background component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,7 @@
   <app-nav-menu></app-nav-menu>
 
   <div class="section sm:pt-8" id="home">
-    <div class="star-layers overflow-hidden">
-      <div class="star-layer" id="stars"></div>
-      <div class="star-layer" id="stars2"></div>
-    </div>
+    <app-stars-background></app-stars-background>
     <app-personal-info></app-personal-info>
   </div>
 
@@ -26,10 +23,7 @@
   </div>
 
   <div class="section" id="aboutme">
-    <div class="star-layers overflow-hidden">
-      <div class="star-layer" id="stars"></div>
-      <div class="star-layer" id="stars2"></div>
-    </div>
+    <app-stars-background></app-stars-background>
     <app-aboutme-section ></app-aboutme-section>
   </div>
 </div>
